feat: deliver stable v1.0.0 integration across Spring Boot, Quarkus, and Micronaut
- Exclude slf4j-simple from junify-db-core shade JAR to prevent logging conflicts
- Fix Document.containsKey and KeyValueBucket duplicate import in core
- Clean up spring-boot-starter package hierarchy and add 12 integration tests
- Fix Micronaut integration dependencies, entityManager, and repository factory
- Migrate Quarkus extension to Quarkus 3.x ConfigMapping and fix build processors